--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 07/22/2020
+ms.date: 08/26/2020
 no-loc:
 - ASP.NET Core Identity
 - cookie
@@ -17,54 +17,54 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 7466c2f81a45f4a9518097e0329f6de32c2e9803
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 755e5d965788d2633757c04e7340757990c0f9e9
+ms.sourcegitcommit: 2039e60eb7b482da8298f82dcd5eda27cf747f32
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88634383"
+ms.lasthandoff: 08/26/2020
+ms.locfileid: "88906427"
 ---
-# <a name="migrate-from-aspnet-core-31-to-50"></a><span data-ttu-id="052fb-103">Migrieren von ASP.net Core 3,1 zu 5,0</span><span class="sxs-lookup"><span data-stu-id="052fb-103">Migrate from ASP.NET Core 3.1 to 5.0</span></span>
+# <a name="migrate-from-aspnet-core-31-to-50"></a><span data-ttu-id="600ab-103">Migrieren von ASP.net Core 3,1 zu 5,0</span><span class="sxs-lookup"><span data-stu-id="600ab-103">Migrate from ASP.NET Core 3.1 to 5.0</span></span>
 
-<span data-ttu-id="052fb-104">Von [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="052fb-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="600ab-104">Von [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="600ab-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="052fb-105">In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt auf ASP.net Core 5,0 aktualisiert wird.</span><span class="sxs-lookup"><span data-stu-id="052fb-105">This article explains how to update an existing ASP.NET Core 3.1 project to ASP.NET Core 5.0.</span></span>
+<span data-ttu-id="600ab-105">In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt auf ASP.net Core 5,0 aktualisiert wird.</span><span class="sxs-lookup"><span data-stu-id="600ab-105">This article explains how to update an existing ASP.NET Core 3.1 project to ASP.NET Core 5.0.</span></span>
 
 > [!IMPORTANT]
-> <span data-ttu-id="052fb-106">ASP.net Core 5,0 befindet sich derzeit in der Vorschau Phase.</span><span class="sxs-lookup"><span data-stu-id="052fb-106">ASP.NET Core 5.0 is currently in preview.</span></span>
+> <span data-ttu-id="600ab-106">ASP.net Core 5,0 befindet sich derzeit in der Vorschau Phase.</span><span class="sxs-lookup"><span data-stu-id="600ab-106">ASP.NET Core 5.0 is currently in preview.</span></span>
 
-## <a name="prerequisites"></a><span data-ttu-id="052fb-107">Voraussetzungen</span><span class="sxs-lookup"><span data-stu-id="052fb-107">Prerequisites</span></span>
+## <a name="prerequisites"></a><span data-ttu-id="600ab-107">Voraussetzungen</span><span class="sxs-lookup"><span data-stu-id="600ab-107">Prerequisites</span></span>
 
-# <a name="visual-studio"></a>[<span data-ttu-id="052fb-108">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="052fb-108">Visual Studio</span></span>](#tab/visual-studio)
+# <a name="visual-studio"></a>[<span data-ttu-id="600ab-108">Visual Studio</span><span class="sxs-lookup"><span data-stu-id="600ab-108">Visual Studio</span></span>](#tab/visual-studio)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vs-5.0.md)]
 
-# <a name="visual-studio-code"></a>[<span data-ttu-id="052fb-109">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="052fb-109">Visual Studio Code</span></span>](#tab/visual-studio-code)
+# <a name="visual-studio-code"></a>[<span data-ttu-id="600ab-109">Visual Studio Code</span><span class="sxs-lookup"><span data-stu-id="600ab-109">Visual Studio Code</span></span>](#tab/visual-studio-code)
 
 [!INCLUDE[](~/includes/net-core-prereqs-vsc-5.0.md)]
 
-# <a name="visual-studio-for-mac"></a>[<span data-ttu-id="052fb-110">Visual Studio für Mac</span><span class="sxs-lookup"><span data-stu-id="052fb-110">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
+# <a name="visual-studio-for-mac"></a>[<span data-ttu-id="600ab-110">Visual Studio für Mac</span><span class="sxs-lookup"><span data-stu-id="600ab-110">Visual Studio for Mac</span></span>](#tab/visual-studio-mac)
 
 [!INCLUDE[](~/includes/net-core-prereqs-mac-5.0.md)]
 
 ---
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="052fb-111">Aktualisieren der .NET Core SDK-Version in „global.json“</span><span class="sxs-lookup"><span data-stu-id="052fb-111">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="600ab-111">Aktualisieren der .NET Core SDK-Version in „global.json“</span><span class="sxs-lookup"><span data-stu-id="600ab-111">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="052fb-112">Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK.</span><span class="sxs-lookup"><span data-stu-id="052fb-112">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the .NET 5.0 SDK version that's installed.</span></span> <span data-ttu-id="052fb-113">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="052fb-113">For example:</span></span>
+<span data-ttu-id="600ab-112">Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK.</span><span class="sxs-lookup"><span data-stu-id="600ab-112">If you rely upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update the `version` property to the .NET 5.0 SDK version that's installed.</span></span> <span data-ttu-id="600ab-113">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="600ab-113">For example:</span></span>
 
 ```diff
 {
   "sdk": {
 -    "version": "3.1.200"
-+    "version": "5.0.100-preview.7.20366.6"
++    "version": "5.0.100-preview.8.20417.9"
   }
 }
 ```
 
-## <a name="update-the-target-framework"></a><span data-ttu-id="052fb-114">Aktualisieren des Ziel Frameworks</span><span class="sxs-lookup"><span data-stu-id="052fb-114">Update the target framework</span></span>
+## <a name="update-the-target-framework"></a><span data-ttu-id="600ab-114">Aktualisieren des Ziel Frameworks</span><span class="sxs-lookup"><span data-stu-id="600ab-114">Update the target framework</span></span>
 
-<span data-ttu-id="052fb-115">Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschnitt [ Blazor WebAssembly Projekte aktualisieren](#update-blazor-webassembly-projects) fort.</span><span class="sxs-lookup"><span data-stu-id="052fb-115">If updating a Blazor WebAssembly project, skip to the [Update Blazor WebAssembly projects](#update-blazor-webassembly-projects) section.</span></span> <span data-ttu-id="052fb-116">Für alle anderen ASP.net Core Projekttyp aktualisieren Sie den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) der Projektdatei auf Folgendes `net5.0` :</span><span class="sxs-lookup"><span data-stu-id="052fb-116">For any other ASP.NET Core project type, update the project file's [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `net5.0`:</span></span>
+<span data-ttu-id="600ab-115">Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschnitt [ Blazor WebAssembly Projekte aktualisieren](#update-blazor-webassembly-projects) fort.</span><span class="sxs-lookup"><span data-stu-id="600ab-115">If updating a Blazor WebAssembly project, skip to the [Update Blazor WebAssembly projects](#update-blazor-webassembly-projects) section.</span></span> <span data-ttu-id="600ab-116">Für alle anderen ASP.net Core Projekttyp aktualisieren Sie den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) der Projektdatei auf Folgendes `net5.0` :</span><span class="sxs-lookup"><span data-stu-id="600ab-116">For any other ASP.NET Core project type, update the project file's [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `net5.0`:</span></span>
 
 ```diff
 <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -77,11 +77,11 @@ ms.locfileid: "88634383"
 </Project>
 ```
 
-## <a name="update-no-locblazor-webassembly-projects"></a><span data-ttu-id="052fb-117">Aktualisieren von Blazor WebAssembly Projekten</span><span class="sxs-lookup"><span data-stu-id="052fb-117">Update Blazor WebAssembly projects</span></span>
+## <a name="update-no-locblazor-webassembly-projects"></a><span data-ttu-id="600ab-117">Aktualisieren von Blazor WebAssembly Projekten</span><span class="sxs-lookup"><span data-stu-id="600ab-117">Update Blazor WebAssembly projects</span></span>
 
-<span data-ttu-id="052fb-118">Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Projektdatei an:</span><span class="sxs-lookup"><span data-stu-id="052fb-118">For Blazor WebAssembly projects, apply the following changes in the project file:</span></span>
+<span data-ttu-id="600ab-118">Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Projektdatei an:</span><span class="sxs-lookup"><span data-stu-id="600ab-118">For Blazor WebAssembly projects, apply the following changes in the project file:</span></span>
 
-1. <span data-ttu-id="052fb-119">Aktualisieren Sie die folgenden Eigenschaften:</span><span class="sxs-lookup"><span data-stu-id="052fb-119">Update the following properties:</span></span>
+1. <span data-ttu-id="600ab-119">Aktualisieren Sie die folgenden Eigenschaften:</span><span class="sxs-lookup"><span data-stu-id="600ab-119">Update the following properties:</span></span>
 
     ```diff
     <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -95,39 +95,39 @@ ms.locfileid: "88634383"
       </PropertyGroup>
     ```
 
-1. <span data-ttu-id="052fb-120">Entfernen Sie den Paket Verweis auf [Microsoft. aspnetcore. Components. Webassembly. Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):</span><span class="sxs-lookup"><span data-stu-id="052fb-120">Remove the package reference to [Microsoft.AspNetCore.Components.WebAssembly.Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):</span></span>
+1. <span data-ttu-id="600ab-120">Entfernen Sie den Paket Verweis auf [Microsoft. aspnetcore. Components. Webassembly. Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):</span><span class="sxs-lookup"><span data-stu-id="600ab-120">Remove the package reference to [Microsoft.AspNetCore.Components.WebAssembly.Build](https://www.nuget.org/packages/Microsoft.AspNetCore.Components.WebAssembly.Build):</span></span>
 
     ```diff
     <ItemGroup>
     -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     ```
 
-## <a name="update-package-references"></a><span data-ttu-id="052fb-121">Aktualisieren von Paketverweisen</span><span class="sxs-lookup"><span data-stu-id="052fb-121">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="600ab-121">Aktualisieren von Paketverweisen</span><span class="sxs-lookup"><span data-stu-id="600ab-121">Update package references</span></span>
 
-<span data-ttu-id="052fb-122">Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. \*](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. \*](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher.</span><span class="sxs-lookup"><span data-stu-id="052fb-122">In the project file, update each [Microsoft.AspNetCore.\*](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft.Extensions.\*](https://www.nuget.org/packages?q=Microsoft.Extensions.*), and [System.Net.Http.Json](https://www.nuget.org/packages/System.Net.Http.Json) package reference's `Version` attribute to 5.0.0 or later.</span></span> <span data-ttu-id="052fb-123">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="052fb-123">For example:</span></span>
+<span data-ttu-id="600ab-122">Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. \*](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. \*](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher.</span><span class="sxs-lookup"><span data-stu-id="600ab-122">In the project file, update each [Microsoft.AspNetCore.\*](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft.Extensions.\*](https://www.nuget.org/packages?q=Microsoft.Extensions.*), and [System.Net.Http.Json](https://www.nuget.org/packages/System.Net.Http.Json) package reference's `Version` attribute to 5.0.0 or later.</span></span> <span data-ttu-id="600ab-123">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="600ab-123">For example:</span></span>
 
 ```diff
 <ItemGroup>
 -    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.6" />
 -    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.6" />
 -    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
-+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0-preview.7.20365.19" />
-+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.7.20364.11" />
-+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.7.20364.11" />
++    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0-preview.8.*" />
++    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.8.*" />
++    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.*" />
 </ItemGroup>
 ```
 
-## <a name="update-docker-images"></a><span data-ttu-id="052fb-124">Aktualisieren von Docker-Images</span><span class="sxs-lookup"><span data-stu-id="052fb-124">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="600ab-124">Aktualisieren von Docker-Images</span><span class="sxs-lookup"><span data-stu-id="600ab-124">Update Docker images</span></span>
 
-<span data-ttu-id="052fb-125">Aktualisieren Sie die *dockerfile* `FROM` -Anweisungen und-Skripts für apps, die Docker verwenden.</span><span class="sxs-lookup"><span data-stu-id="052fb-125">For apps using Docker, update your *Dockerfile* `FROM` statements and scripts.</span></span> <span data-ttu-id="052fb-126">Verwenden Sie ein Basis Image, das den ASP.net Core 5,0-Lauf Zeit Modul einschließt.</span><span class="sxs-lookup"><span data-stu-id="052fb-126">Use a base image that includes the ASP.NET Core 5.0 runtime.</span></span> <span data-ttu-id="052fb-127">Beachten Sie den folgenden `docker pull` Befehls Unterschied zwischen ASP.net Core 3,1 und 5,0:</span><span class="sxs-lookup"><span data-stu-id="052fb-127">Consider the following `docker pull` command difference between ASP.NET Core 3.1 and 5.0:</span></span>
+<span data-ttu-id="600ab-125">Aktualisieren Sie die *dockerfile* `FROM` -Anweisungen und-Skripts für apps, die Docker verwenden.</span><span class="sxs-lookup"><span data-stu-id="600ab-125">For apps using Docker, update your *Dockerfile* `FROM` statements and scripts.</span></span> <span data-ttu-id="600ab-126">Verwenden Sie ein Basis Image, das den ASP.net Core 5,0-Lauf Zeit Modul einschließt.</span><span class="sxs-lookup"><span data-stu-id="600ab-126">Use a base image that includes the ASP.NET Core 5.0 runtime.</span></span> <span data-ttu-id="600ab-127">Beachten Sie den folgenden `docker pull` Befehls Unterschied zwischen ASP.net Core 3,1 und 5,0:</span><span class="sxs-lookup"><span data-stu-id="600ab-127">Consider the following `docker pull` command difference between ASP.NET Core 3.1 and 5.0:</span></span>
 
 ```diff
 - docker pull mcr.microsoft.com/dotnet/core/aspnet:3.1
 + docker pull mcr.microsoft.com/dotnet/aspnet:5.0
 ```
 
-<span data-ttu-id="052fb-128">Im Rahmen der Umstellung auf ".net" als Produktname wurden die Docker-Images aus den `mcr.microsoft.com/dotnet/core` Depots in verschoben `mcr.microsoft.com/dotnet` .</span><span class="sxs-lookup"><span data-stu-id="052fb-128">As part of the move to ".NET" as the product name, the Docker images moved from the `mcr.microsoft.com/dotnet/core` repositories to `mcr.microsoft.com/dotnet`.</span></span> <span data-ttu-id="052fb-129">Weitere Informationen finden Sie unter [dotnet/dotnet-docker # 1939](https://github.com/dotnet/dotnet-docker/issues/1939).</span><span class="sxs-lookup"><span data-stu-id="052fb-129">For more information, see [dotnet/dotnet-docker#1939](https://github.com/dotnet/dotnet-docker/issues/1939).</span></span>
+<span data-ttu-id="600ab-128">Im Rahmen der Umstellung auf ".net" als Produktname wurden die Docker-Images aus den `mcr.microsoft.com/dotnet/core` Depots in verschoben `mcr.microsoft.com/dotnet` .</span><span class="sxs-lookup"><span data-stu-id="600ab-128">As part of the move to ".NET" as the product name, the Docker images moved from the `mcr.microsoft.com/dotnet/core` repositories to `mcr.microsoft.com/dotnet`.</span></span> <span data-ttu-id="600ab-129">Weitere Informationen finden Sie unter [dotnet/dotnet-docker # 1939](https://github.com/dotnet/dotnet-docker/issues/1939).</span><span class="sxs-lookup"><span data-stu-id="600ab-129">For more information, see [dotnet/dotnet-docker#1939](https://github.com/dotnet/dotnet-docker/issues/1939).</span></span>
 
-## <a name="review-breaking-changes"></a><span data-ttu-id="052fb-130">Wichtige Änderungen überprüfen</span><span class="sxs-lookup"><span data-stu-id="052fb-130">Review breaking changes</span></span>
+## <a name="review-breaking-changes"></a><span data-ttu-id="600ab-130">Wichtige Änderungen überprüfen</span><span class="sxs-lookup"><span data-stu-id="600ab-130">Review breaking changes</span></span>
 
-<span data-ttu-id="052fb-131">Grundlegende Änderungen von .net Core 3,1 auf .net 5,0 finden Sie unter [Breaking Changes for Migration from Version 3,1 to 5,0](/dotnet/core/compatibility/3.1-5.0).</span><span class="sxs-lookup"><span data-stu-id="052fb-131">For breaking changes from .NET Core 3.1 to .NET 5.0, see [Breaking changes for migration from version 3.1 to 5.0](/dotnet/core/compatibility/3.1-5.0).</span></span> <span data-ttu-id="052fb-132">ASP.net Core und Entity Framework Core sind auch in der Liste enthalten.</span><span class="sxs-lookup"><span data-stu-id="052fb-132">ASP.NET Core and Entity Framework Core are also included in the list.</span></span>
+<span data-ttu-id="600ab-131">Grundlegende Änderungen von .net Core 3,1 auf .net 5,0 finden Sie unter [Breaking Changes for Migration from Version 3,1 to 5,0](/dotnet/core/compatibility/3.1-5.0).</span><span class="sxs-lookup"><span data-stu-id="600ab-131">For breaking changes from .NET Core 3.1 to .NET 5.0, see [Breaking changes for migration from version 3.1 to 5.0](/dotnet/core/compatibility/3.1-5.0).</span></span> <span data-ttu-id="600ab-132">ASP.net Core und Entity Framework Core sind auch in der Liste enthalten.</span><span class="sxs-lookup"><span data-stu-id="600ab-132">ASP.NET Core and Entity Framework Core are also included in the list.</span></span>
