--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 08/26/2020
+ms.date: 09/14/2020
 no-loc:
 - ASP.NET Core Identity
 - cookie
@@ -17,12 +17,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 755e5d965788d2633757c04e7340757990c0f9e9
-ms.sourcegitcommit: 2039e60eb7b482da8298f82dcd5eda27cf747f32
+ms.openlocfilehash: 72ccdcc626bc29874c91a2e1bb8b8a37d7e323f6
+ms.sourcegitcommit: 600666440398788db5db25dc0496b9ca8fe50915
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/26/2020
-ms.locfileid: "88906427"
+ms.lasthandoff: 09/14/2020
+ms.locfileid: "90080354"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -57,7 +57,7 @@ Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/
 {
   "sdk": {
 -    "version": "3.1.200"
-+    "version": "5.0.100-preview.8.20417.9"
++    "version": "5.0.100-rc.1.20452.10"
   }
 }
 ```
@@ -81,6 +81,13 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 
 Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Projektdatei an:
 
+1. Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :
+
+    ```diff
+    - <Project Sdk="Microsoft.NET.Sdk.Web">
+    + <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+    ```
+
 1. Aktualisieren Sie die folgenden Eigenschaften:
 
     ```diff
@@ -90,8 +97,6 @@ Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Pr
     -     <TargetFramework>netstandard2.1</TargetFramework>
     -     <RazorLangVersion>3.0</RazorLangVersion>
     +     <TargetFramework>net5.0</TargetFramework>
-    +     <RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
-    +     <UseBlazorWebAssembly>true</UseBlazorWebAssembly>
       </PropertyGroup>
     ```
 
@@ -111,9 +116,9 @@ Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://ww
 -    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.6" />
 -    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.6" />
 -    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
-+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0-preview.8.*" />
-+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-preview.8.*" />
-+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.*" />
++    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0-rc.1.*" />
++    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-rc.1.*" />
++    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.*" />
 </ItemGroup>
 ```
 
