commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -17,12 +17,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 7dbf6f339c4d1e329b9fde2d604160efa28457ff
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 4be20508392496e2c565314379ed8abfb6cbc59c
+ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88629118"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90722721"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrieren von ASP.net Core 2,2 zu 3,0
 
@@ -385,7 +385,7 @@ Verbindungs Adapter ( `Microsoft.AspNetCore.Server.Kestrel.Core.Adapter.Internal
 * Wurden von Verbindungs Adaptern zur Verbindungs Middleware verschoben.
 * Diese Erweiterungs Methoden funktionieren wie in früheren Versionen von ASP.net Core. 
 
-Weitere Informationen finden Sie [im Abschnitt "tlsfilterconnectionhandler" im Abschnitt "listenoptions. Protokolls" im Kestrel-Artikel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#listenoptionsprotocols).
+Weitere Informationen finden Sie [im Abschnitt "tlsfilterconnectionhandler" im Abschnitt "listenoptions. Protokolls" im Kestrel-Artikel](../fundamentals/servers/kestrel.md?view=aspnetcore-3.0#listenoptionsprotocols).
 
 ### <a name="transport-abstractions-moved-and-made-public"></a>Transport Abstraktionen verschoben und öffentlich gemacht
 
@@ -427,7 +427,7 @@ Weitere Informationen finden Sie unter [Put Request Trailers in a separate Colle
 
 ### <a name="allowsynchronousio-disabled"></a>Allowsynchronousio deaktiviert
 
-`AllowSynchronousIO` aktiviert oder deaktiviert synchrone e/a-APIs, wie `HttpRequest.Body.Read` z `HttpResponse.Body.Write` . b `Stream.Flush` ., und. Diese APIs sind eine Quelle der Thread Hungersnot, die zu app-Abstürzen führt. In 3.0 ist `AllowSynchronousIO` standardmäßig deaktiviert. Weitere Informationen finden Sie [im Abschnitt "Synchrone e/a" im Kestrel-Artikel](/aspnet/core/fundamentals/servers/kestrel?view=aspnetcore-3.0#synchronous-io).
+`AllowSynchronousIO` aktiviert oder deaktiviert synchrone e/a-APIs, wie `HttpRequest.Body.Read` z `HttpResponse.Body.Write` . b `Stream.Flush` ., und. Diese APIs sind eine Quelle der Thread Hungersnot, die zu app-Abstürzen führt. In 3.0 ist `AllowSynchronousIO` standardmäßig deaktiviert. Weitere Informationen finden Sie [im Abschnitt "Synchrone e/a" im Kestrel-Artikel](../fundamentals/servers/kestrel.md?view=aspnetcore-3.0#synchronous-io).
 
 Wenn eine synchrone e/a erforderlich ist, kann Sie aktiviert werden, indem die- `AllowSynchronousIO` Option auf dem verwendeten Server konfiguriert wird ( `ConfigureKestrel` z. b. bei Verwendung von Kestrel). Beachten Sie, dass Server (Kestrel, httpsys, Testserver usw.) über eine eigene `AllowSynchronousIO` Option verfügen, die sich nicht auf andere Server auswirkt. Synchrone e/a-Vorgänge können für alle Server auf Anforderungs Basis aktiviert werden. verwenden Sie dazu die folgende `IHttpBodyControlFeature.AllowSynchronousIO` Option:
 
@@ -934,7 +934,7 @@ public void Configure(IApplicationBuilder app)
 
 #### <a name="async-suffix-removal-from-controller-action-names"></a>Asynchrones Suffix aus Controller-Aktions Namen entfernen
 
-In ASP.net Core 3,0 entfernt ASP.net Core MVC das `Async` Suffix aus den Controller Aktions Namen. Das Routing und die Verknüpfungs Generierung sind von dieser neuen Standardeinstellung betroffen. Beispiel:
+In ASP.net Core 3,0 entfernt ASP.net Core MVC das `Async` Suffix aus den Controller Aktions Namen. Das Routing und die Verknüpfungs Generierung sind von dieser neuen Standardeinstellung betroffen. Zum Beispiel:
 
 ```csharp
 public class ProductsController : Controller
@@ -950,7 +950,7 @@ public class ProductsController : Controller
 Vor ASP.net Core 3,0:
 
 * Auf die vorherige Aktion kann auf der Route " *Products/listasync* " zugegriffen werden.
-* Die Link Generierung erforderte das Angeben des Suffixes `Async` . Beispiel:
+* Die Link Generierung erforderte das Angeben des Suffixes `Async` . Zum Beispiel:
 
     ```cshtml
     <a asp-controller="Products" asp-action="ListAsync">List</a>
@@ -959,7 +959,7 @@ Vor ASP.net Core 3,0:
 In ASP.net Core 3,0:
 
 * Auf die vorangehende Aktion kann auf der Route " *Products/List* " zugegriffen werden.
-* Bei der Link Generierung muss das Suffix nicht angegeben werden `Async` . Beispiel:
+* Bei der Link Generierung muss das Suffix nicht angegeben werden `Async` . Zum Beispiel:
 
     ```cshtml
     <a asp-controller="Products" asp-action="List">List</a>
@@ -1117,7 +1117,7 @@ services.AddSignalR(...)
         })
 ```
 
-**Ent**
+**Client:**
 
 ```csharp
 new HubConnectionBuilder()
@@ -1173,7 +1173,7 @@ Bibliotheken müssen häufig mehrere Versionen von ASP.net Core unterstützen. D
 * Die Bibliothek basiert auf einer Funktion, die über eine binäre [Breaking Change](#breaking-api-changes)verfügt.
 * Die Bibliothek möchte die neuen Features in ASP.net Core 3,0 nutzen. 
 
-Beispiel:
+Zum Beispiel:
 
 ```xml
 <Project Sdk="Microsoft.NET.Sdk">
