--- a/aspnetcore/security/samesite/rp21.md
+++ b/aspnetcore/security/samesite/rp21.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: security/samesite/rp21
-ms.openlocfilehash: 1cf416cedb3384e8f8b85c64bf57d957420a445a
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 5c8cd0ce6e8c08638ba3d9a924d81b969581542d
+ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88632251"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90722591"
 ---
 # <a name="aspnet-core-21-no-locrazor-pages-samesite-no-loccookie-sample"></a>Beispiel für "ASP.net Core 2,1 Razor pages SameSite" cookie
 
@@ -59,7 +59,7 @@ Response.Cookies.Append(CookieName, "cookieValue", cookieOptions);
 
 ## <a name="setting-no-loccookie-authentication-and-session-state-no-loccookies"></a>Festlegen der Cookie Authentifizierung und des Sitzungs Zustands cookie
 
-Cookie Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-2.1) legen ihre SameSite-Optionen über Cookie Optionen fest, z. b.
+Cookie Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](../samesite.md?view=aspnetcore-2.1) legen ihre SameSite-Optionen über Cookie Optionen fest, z. b.
 
 ```c#
 services.AddAuthentication(CookieAuthenticationDefaults.AuthenticationScheme)
@@ -174,5 +174,5 @@ Um die ASP.net Core Änderungen für .NET Framework zu erhalten, stellen Sie sic
 ### <a name="more-information"></a>Weitere Informationen
  
 [Chrome-Updates](https://www.chromium.org/updates/same-site) 
- Dokumentation zu ASP.net Core [SameSite](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-2.1) 
+ Dokumentation zu ASP.net Core [SameSite](../samesite.md?view=aspnetcore-2.1) 
  [ASP.net Core 2,1 SameSite-Änderungs Ankündigung](https://github.com/dotnet/aspnetcore/issues/8212)
