--- a/aspnetcore/security/samesite/rp31.md
+++ b/aspnetcore/security/samesite/rp31.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: security/samesite/rp31
-ms.openlocfilehash: 5c0eba6fdf84c0202ac3a20db6a851e513215fb7
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 2e178f0f2c3849a17ef3d3aeaa96f3e4f286e967
+ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88632199"
+ms.lasthandoff: 09/17/2020
+ms.locfileid: "90722578"
 ---
 # <a name="aspnet-core-31-no-locrazor-pages-samesite-no-loccookie-sample"></a>Beispiel für "ASP.net Core 3,1 Razor pages SameSite" cookie
 
@@ -57,7 +57,7 @@ Response.Cookies.Append(CookieName, "cookieValue", cookieOptions);
 
 ## <a name="setting-no-loccookie-authentication-and-session-state-no-loccookies"></a>Festlegen der Cookie Authentifizierung und des Sitzungs Zustands cookie
 
-Cookie Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](https://docs.microsoft.com/aspnet/core/security/samesite?view=aspnetcore-3.0) legen ihre SameSite-Optionen über Cookie Optionen fest, z. b.
+Cookie Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](../samesite.md?view=aspnetcore-3.0) legen ihre SameSite-Optionen über Cookie Optionen fest, z. b.
 
 ```c#
 services.AddAuthentication(CookieAuthenticationDefaults.AuthenticationScheme)
