commit translated contents

--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -17,12 +17,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: 4be20508392496e2c565314379ed8abfb6cbc59c
-ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
+ms.openlocfilehash: c76eff595d0be1eebaac00bf0292a6dbca2649db
+ms.sourcegitcommit: d1a897ebd89daa05170ac448e4831d327f6b21a8
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 09/17/2020
-ms.locfileid: "90722721"
+ms.lasthandoff: 10/01/2020
+ms.locfileid: "91606812"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrieren von ASP.net Core 2,2 zu 3,0
 
@@ -525,7 +525,9 @@ Der Standard-JSON-Serialisierer für ASP.net Core ist jetzt <xref:System.Text.Js
                 new CamelCasePropertyNamesContractResolver());
   ```
 
-**Hinweis:** Wenn die `AddNewtonsoftJson` Methode nicht verfügbar ist, stellen Sie sicher, dass Sie das Paket installiert haben [`Microsoft.AspNetCore.Mvc.NewtonsoftJson`](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) . Ein häufiger Fehler besteht darin, die [Newtonsoft.Jsfür](https://www.nuget.org/packages/Newtonsoft.Json/) das Paket anstelle des [`Microsoft.AspNetCore.Mvc.NewtonsoftJson`](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) Pakets zu installieren.
+  **Hinweis:** Wenn die `AddNewtonsoftJson` Methode nicht verfügbar ist, stellen Sie sicher, dass Sie das Paket installiert haben [`Microsoft.AspNetCore.Mvc.NewtonsoftJson`](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) . Ein häufiger Fehler besteht darin, die [Newtonsoft.Jsfür](https://www.nuget.org/packages/Newtonsoft.Json/) das Paket anstelle des [`Microsoft.AspNetCore.Mvc.NewtonsoftJson`](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson) Pakets zu installieren.
+
+Weitere Informationen finden [Sie unter Hinzufügen Newtonsoft.Json-based JSON-Formatunterstützung](xref:web-api/advanced/formatting#add-newtonsoftjson-based-json-format-support).
 
 ## <a name="mvc-service-registration"></a>MVC-Dienst Registrierung
 
@@ -934,7 +936,7 @@ public void Configure(IApplicationBuilder app)
 
 #### <a name="async-suffix-removal-from-controller-action-names"></a>Asynchrones Suffix aus Controller-Aktions Namen entfernen
 
-In ASP.net Core 3,0 entfernt ASP.net Core MVC das `Async` Suffix aus den Controller Aktions Namen. Das Routing und die Verknüpfungs Generierung sind von dieser neuen Standardeinstellung betroffen. Zum Beispiel:
+In ASP.net Core 3,0 entfernt ASP.net Core MVC das `Async` Suffix aus den Controller Aktions Namen. Das Routing und die Verknüpfungs Generierung sind von dieser neuen Standardeinstellung betroffen. Beispiel:
 
 ```csharp
 public class ProductsController : Controller
@@ -950,7 +952,7 @@ public class ProductsController : Controller
 Vor ASP.net Core 3,0:
 
 * Auf die vorherige Aktion kann auf der Route " *Products/listasync* " zugegriffen werden.
-* Die Link Generierung erforderte das Angeben des Suffixes `Async` . Zum Beispiel:
+* Die Link Generierung erforderte das Angeben des Suffixes `Async` . Beispiel:
 
     ```cshtml
     <a asp-controller="Products" asp-action="ListAsync">List</a>
@@ -959,7 +961,7 @@ Vor ASP.net Core 3,0:
 In ASP.net Core 3,0:
 
 * Auf die vorangehende Aktion kann auf der Route " *Products/List* " zugegriffen werden.
-* Bei der Link Generierung muss das Suffix nicht angegeben werden `Async` . Zum Beispiel:
+* Bei der Link Generierung muss das Suffix nicht angegeben werden `Async` . Beispiel:
 
     ```cshtml
     <a asp-controller="Products" asp-action="List">List</a>
@@ -1173,7 +1175,7 @@ Bibliotheken müssen häufig mehrere Versionen von ASP.net Core unterstützen. D
 * Die Bibliothek basiert auf einer Funktion, die über eine binäre [Breaking Change](#breaking-api-changes)verfügt.
 * Die Bibliothek möchte die neuen Features in ASP.net Core 3,0 nutzen. 
 
-Zum Beispiel:
+Beispiel:
 
 ```xml
 <Project Sdk="Microsoft.NET.Sdk">
