commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 10/16/2020
+ms.date: 10/20/2020
 no-loc:
 - ASP.NET Core Identity
 - cookie
@@ -17,12 +17,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: 8103d9524c47199884a8f292578c23cd17d14348
-ms.sourcegitcommit: 3058778a32c11c596cee67a289900137cca8d1d6
+ms.openlocfilehash: fbc66ac5de44c99396485a3a4446abe7cf96b065
+ms.sourcegitcommit: b5ebaf42422205d212e3dade93fcefcf7f16db39
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/16/2020
-ms.locfileid: "92134073"
+ms.lasthandoff: 10/21/2020
+ms.locfileid: "92326603"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -79,7 +79,7 @@ Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschn
 
 ## <a name="update-no-locblazor-webassembly-projects"></a>Aktualisieren von Blazor WebAssembly Projekten
 
-Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Projektdatei an:
+Blazor WebAssemblyWenden Sie bei Projekten, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:
 
 1. Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :
 
@@ -106,6 +106,9 @@ Wenden Sie für- Blazor WebAssembly Projekte die folgenden Änderungen in der Pr
     <ItemGroup>
     -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     ```
+    
+> [!NOTE]
+> Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
