commit translated contents

--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -6,6 +6,7 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 07/02/2020
 no-loc:
+- appsettings.json
 - ASP.NET Core Identity
 - cookie
 - Cookie
@@ -17,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/30-to-31
-ms.openlocfilehash: affdc9fa45ec04e3d2f9551133e284f11393de50
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 97afc236808b9473e8e50349c495cc3fff13cd19
+ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88629027"
+ms.lasthandoff: 10/30/2020
+ms.locfileid: "93052213"
 ---
 # <a name="migrate-from-aspnet-core-30-to-31"></a>Migrieren von ASP.net Core 3,0 zu 3,1
 
@@ -48,7 +49,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,0-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK. Beispiel:
+Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK. Zum Beispiel:
 
 ```diff
 {
@@ -76,7 +77,7 @@ Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/s
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher. Beispiel:
+Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher. Zum Beispiel:
 
 ```diff
 <ItemGroup>
@@ -89,7 +90,7 @@ Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jed
 
 ## <a name="update-docker-images"></a>Aktualisieren von Docker-Images
 
-Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält. Beispiel:
+Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält. Zum Beispiel:
 
 ```console
 docker pull mcr.microsoft.com/dotnet/core/aspnet:3.1
