--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -6,6 +6,7 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 10/20/2020
 no-loc:
+- appsettings.json
 - ASP.NET Core Identity
 - cookie
 - Cookie
@@ -17,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: fbc66ac5de44c99396485a3a4446abe7cf96b065
-ms.sourcegitcommit: b5ebaf42422205d212e3dade93fcefcf7f16db39
+ms.openlocfilehash: a0208fa7350083dd3bed8287ebd1a258f8e2c0c2
+ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/21/2020
-ms.locfileid: "92326603"
+ms.lasthandoff: 10/30/2020
+ms.locfileid: "93052148"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -51,7 +52,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
 
 ```diff
 {
@@ -112,7 +113,7 @@ Blazor WebAssemblyWenden Sie bei Projekten, einschließlich des *`Client`* Proje
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Zum Beispiel:
 
 ```diff
 <ItemGroup>
